ctowasm/test/samples/error/test.c
#include <source_stdlib>

/**
 * Static storage class tests.
 */

int main() {
  x * y;
}
